# modelstat

./: .gitignore  CONTAINER_NAME  Dockerfile  Makefile  NEWS.md  README.md  docker-compose.yml  pyproject.toml  requirements_apt  requirements_pip
.devcontainer/: devcontainer.json
modelstat/: __init__.py  core.py
modelstat/_utils/: __init__.py  typehinting.py
regparse/: __init__.py
