[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "mcnparse"
version = "0.5.0"
description = "Your package description"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "numpy",
    "pandas",
    "pyarrow"
]
requires-python = ">= 3.11"
[tool.hatch.build.targets.wheel]
include = ["mcnparse", "tests/**/*", "pyproject.toml", "README.md", "LICENSE"]
