[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "modelstat"
version = "0.1.0"
description = "Your package description"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "numpy"
]
requires-python = ">= 3.11"
[tool.hatch.build.targets.wheel]
include = ["modelstat", "tests/**/*", "pyproject.toml", "README.md", "LICENSE"]
